vm-copy-managed-disks/template.json
{
	"$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.24",
	"parameters": {
		"virtualMachineAdminUserName": {
			"type": "string",
			"defaultValue": "Blaise5",
			"metadata": {
				"description": "Administrator Username for the local admin account"
			}
		},
		"virtualMachineAdminPassword": {
			"type": "securestring",
			"defaultValue": "GEN-PASSWORD",
			"metadata": {
				"description": "Administrator password for the local admin account"
			}
		},
		"virtualMachineNamePrefix": {
			"type": "string",
			"maxLength": 15,
			"metadata": {
				"description": "Name of the virtual machine to be created"
			}
		},
		"virtualMachineCount": {
			"type": "int",
			"metadata": {
				"description": "Number of virtual machines to be created"
			}
		},
		"virtualMachineSize": {
			"type": "string",
			"defaultValue": "Standard_D4s_v3",
			"allowedValues": [
				"Standard_DS1_v2",
				"Standard_DS2_v2",
				"Standard_DS3_v2",
				"Standard_DS4_v2",
				"Standard_DS5_v2",
				"Standard_D4s_v3",
				"Standard_E2s_v3"
			],
			"metadata": {
				"description": "Virtual Machine Size"
			}
		},
		"operatingSystem": {
			"type": "string",
			"defaultValue": "Server2016Gen2",
			"allowedValues": [
				"Server2012R2",
				"Server2016",
				"Server2016Gen2",
				"Server2019"
			],
			"metadata": {
				"description": "Operating System of the Server"
			}
		},
		"dnsPrefixForPublicIP": {
			"type": "string",
			"minLength": 1,
			"maxLength": 14,
			"defaultValue": "[concat('d', uniqueString(resourceGroup().id))]",
			"metadata": {
				"description": "Globally unique DNS prefix for the Public IPs used to access the Virtual Machines"
			}
		},
		"location": {
			"type": "string",
			"defaultValue": "[resourceGroup().location]",
			"metadata": {
				"description": "Location for all resources."
			}
		},
		"publicIpAddressType": {
			"type": "string",
			"defaultValue": "Dynamic",
			"metadata": {
				"description": "Public IP address allocation method."
			}
		},
		"publicIpAddressSku": {
			"type": "string",
			"defaultValue": "Basic",
			"metadata": {
				"description": "Public IP address stock keeping unit"
			}
		},
		"networkSecurityGroupId": {
			"type": "string",
			"defaultValue": "blaise5-nsg",
			"metadata": {
				"description": "Network security group name/id"
			}
		},
		"virtualNetworkId": {
			"type": "string",
			"defaultValue": "blaise5-vnet",
			"metadata": {
				"description": "Virtual Network name/id"
			}
		},
		"autoShutdownStatus": {
			"type": "string",
			"defaultValue": "Disabled",
			"metadata": {
				"description": "Auto shut down flag indicates whether or not the virtual machines need to be automatically shut down"
			}
		},
		"autoShutdownTime": {
			"type": "string",
			"defaultValue": "19:00",
			"metadata": {
				"description": "Time at which to automatically shut down the virtual machines"
			}
		},
		"autoShutdownTimeZone": {
			"type": "string",
			"defaultValue": "W. Europe Standard Time",
			"metadata": {
				"description": "The time zone in relation to which the auto shut down time is set"
			}
		},
		"autoShutdownNotificationStatus": {
			"type": "string",
			"defaultValue": "Disabled",
			"metadata": {
				"description": "Flag to indicate whether or not a notification should be sent when the virtual machines are about to be shut down"
			}
		},
		"autoShutdownNotificationLocale": {
			"type": "string",
			"defaultValue": "en",
			"metadata": {
				"description": "Notification culture"
			}
		},
		"autoShutdownNotificationEmail": {
			"type": "string",
			"metadata": {
				"description": "Notification recipient email address"
			}
		},
		"imageReference": {
			"type": "object",
			"defaultValue": {
				"publisher": "[variables('operatingSystemValues')[parameters('operatingSystem')].PublisherValue]",
				"offer": "[variables('operatingSystemValues')[parameters('operatingSystem')].OfferValue]",
				"sku": "[variables('operatingSystemValues')[parameters('operatingSystem')].SkuValue]",
				"version": "latest"
			},
			"metadata": {
				"description": "Virtual machine image reference"
			}
		},
		"imageReferenceId": {
			"type": "string",
			"metadata": {
				"description": "Virtual machine image reference"
			}
		}
	},
	"variables": {
		"myVNetName": "blaise5-vnet",
		"myVNetPrefix": "10.0.0.0/16",
		"myVNetSubnetName": "subnet1",
		"myVNetSubnetPrefix": "10.0.0.0/24",
		"operatingSystemValues": {
			"Server2012R2": {
				"PublisherValue": "MicrosoftWindowsServer",
				"OfferValue": "WindowsServer",
				"SkuValue": "2012-R2-Datacenter"
			},
			"Server2016": {
				"PublisherValue": "MicrosoftWindowsServer",
				"OfferValue": "WindowsServer",
				"SkuValue": "2016-Datacenter"
			},
			"Server2016Gen2": {
				"PublisherValue": "MicrosoftWindowsServer",
				"OfferValue": "WindowsServer",
				"SkuValue": "2016-datacenter-gensecond"
			},
			"Server2019": {
				"PublisherValue": "MicrosoftWindowsServer",
				"OfferValue": "WindowsServer",
				"SkuValue": "2019-Datacenter"
			}
		},
		"subnetRef": "[concat(variables('myVNetId'), '/subnets/', parameters('myVNetSubnetName'))]",
		"myNSGName": "blaise5-nsg",
		"myNSGId": "[parameters('networkSecurityGroupId')]",
        	"myVNetId": "[parameters('virtualNetworkId')]"
	},
	"resources": [
		{
			"comments": "Default Network Security Group for template",
			"type": "Microsoft.Network/networkSecurityGroups",
			"apiVersion": "2020-05-01",
			"name": "[variables('myNSGName')]",
			"location": "[parameters('location')]",
			"properties": {
				"securityRules": [
					{
						"name": "RDP",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "3389",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 300,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "HTTP",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "80",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 320,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "HTTPS",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "443",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 340,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "SSH",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "22",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 360,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "Blaise-Services-Management",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "8031",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 200,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "Blaise-Services-External",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "8033",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 220,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					}
				]
			}
		},
		{
			"name": "[variables('myVNetName')]",
			"type": "Microsoft.Network/virtualNetworks",
			"location": "[parameters('location')]",
			"apiVersion": "2020-05-01",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', variables('myNSGId'))]"
			],
			"tags": {
				"displayName": "[variables('myVNetName')]"
			},
			"properties": {
				"addressSpace": {
					"addressPrefixes": [
						"[variables('myVNetPrefix')]"
					]
				},
				"subnets": [
					{
						"name": "[variables('myVNetSubnetName')]",
						"properties": {
							"addressPrefix": "[variables('myVNetSubnetPrefix')]",
							"networkSecurityGroup": {
								"id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('myNSGId'))]"
							}
						}
					}
				]
			}
		},
		{
			"type": "Microsoft.Compute/virtualMachines",
			"name": "[concat(parameters('virtualMachineNamePrefix'), copyIndex(1))]",
			"apiVersion": "2020-06-01",
			"location": "[parameters('location')]",
			"copy": {
				"name": "VMcopy",
				"count": "[parameters('virtualMachineCount')]"
			},
			"properties": {
				"hardwareProfile": {
					"vmSize": "[parameters('virtualMachineSize')]"
				},
				"osProfile": {
					"computerName": "[concat(parameters('virtualMachineNamePrefix'),copyIndex(1))]",
					"adminUsername": "[parameters('virtualMachineAdminUserName')]",
					"adminPassword": "[parameters('virtualMachineAdminPassword')]",
					"windowsConfiguration": {
						"provisionVMAgent": true
					}
				},
                                "storageProfile": {
                                        "osDisk": {
                                                "createOption": "fromImage",
                                                "managedDisk": {
                                                        "storageAccountType": "Premium_LRS"
                                                }
                                        },
                                        "imageReference": {
                                                "id": "[parameters('imageReferenceId')]"
                                        }
                                },
				"networkProfile": {
					"networkInterfaces": [
						{
							"id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('virtualMachineNamePrefix'), copyIndex(1), '-NIC1'))]"
						}
					]
				},
				"diagnosticsProfile": {
					"bootDiagnostics": {
						"enabled": true
					}
				}
			},
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('virtualMachineNamePrefix'), copyIndex(1), '-NIC1'))]"
			]
		},
		{
			"type": "Microsoft.Network/networkInterfaces",
			"name": "[concat(parameters('virtualMachineNamePrefix'), copyIndex(1), '-NIC1')]",
			"apiVersion": "2020-05-01",
			"location": "[parameters('location')]",
			"copy": {
				"name": "NICCopy",
				"count": "[parameters('virtualMachineCount')]"
			},
			"properties": {
				"ipConfigurations": [
					{
						"name": "ipconfig1",
						"properties": {
							"privateIPAllocationMethod": "Dynamic",
							"publicIPAddress": {
								"id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachineNamePrefix'), copyIndex(1), '-PIP1'))]"
							},
							"subnet": {
								"id": "[variables('subnetRef')]"
							}
						}
					}
				],
				"enableIPForwarding": false
			},
			"dependsOn": [
				"[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachineNamePrefix'), copyIndex(1), '-PIP1'))]",
				"[resourceId('Microsoft.Network/virtualNetworks/', variables('myVNetName'))]"
			]
		},
		{
			"apiVersion": "2020-05-01",
			"type": "Microsoft.Network/publicIPAddresses",
			"name": "[concat(parameters('virtualMachineNamePrefix'), copyIndex(1), '-PIP1')]",
			"location": "[parameters('location')]",
			"copy": {
				"name": "PIPCopy",
				"count": "[parameters('virtualMachineCount')]"
			},
			"tags": {
				"displayName": "[concat(parameters('virtualMachineNamePrefix'), copyIndex(1), '-PIP1')]"
			},
			"properties": {
				"publicIPAllocationMethod": "[parameters('publicIpAddressType')]",
				"dnsSettings": {
					"domainNameLabel": "[concat(parameters('dnsPrefixForPublicIP'), copyIndex(1))]"
				}
			},
			"sku": {
				"name": "[parameters('publicIpAddressSku')]"
			}
		},
		{
			"name": "[concat('shutdown-computevm-', parameters('virtualMachineNamePrefix'), copyIndex(1))]",
			"type": "Microsoft.DevTestLab/schedules",
			"apiVersion": "2018-09-15",
			"location": "[parameters('location')]",
			"copy": {
				"name": "shutdownCopy",
				"count": "[parameters('virtualMachineCount')]"
			},
			"dependsOn": [
				"[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachineNamePrefix'), copyIndex(1))]"
			],
			"properties": {
				"status": "[parameters('autoShutdownStatus')]",
				"taskType": "ComputeVmShutdownTask",
				"dailyRecurrence": {
					"time": "[parameters('autoShutdownTime')]"
				},
				"timeZoneId": "[parameters('autoShutdownTimeZone')]",
				"targetResourceId": "[resourceId('Microsoft.Compute/virtualMachines', concat(parameters('virtualMachineNamePrefix'), copyIndex(1)))]",
				"notificationSettings": {
					"status": "[parameters('autoShutdownNotificationStatus')]",
					"notificationLocale": "[parameters('autoShutdownNotificationLocale')]",
					"timeInMinutes": "30",
					"emailRecipient": "[parameters('autoShutdownNotificationEmail')]"
				}
			}
		}
	],
	"outputs": {}
}
